@@ -1,0 +1,19 @@
+//
+// Type: eachdesk_tumbler
+// Comment: Nice enclosure: tumbler design.
+//
+// Status: supported
+// Credit: By superelchi (thx c.dent)
+// Date: 2012-07-28
+// Url: http://www.ebay.com/itm/Hot-1-5-Digital-Photo-Frame-Picture-Album-16MB-New-Tumbler-03-/110842497224
+// 
+// The CRCs identify.py detected - in the form "OpenWin CRC", "Init(Tbl) CRC"
+// CRC: 0xd5efd5d9, 0x672aa902
+//
+// 
+#define LCD_128x128
+#define LCD_CONTROLLER_CUSTOM
+#define LCD_DEFAULT_BRIGHTNESS_VALUE 15
+#define LCD_DEFAULT_CONTRAST_VALUE 5
+// Contrast adjustable in menu
+#define LCD_USER_ADJUSTABLE_CONTRAST 1
